tests/__snapshots__/validation-if-argument-is-missing-stderr.snap.txt
Error: Directive requires an argument.

  1 | // @tstyche if
    | ~~~~~~~~~~~~~~
  2 | 
  3 | import { expect, test } from "tstyche";
  4 | 

      at ./__typetests__/sample.tst.ts:1:1

